--- a/examples/ppo-cartpole/config.yaml
+++ b/examples/ppo-cartpole/config.yaml
@@ -1,17 +1,17 @@
 env_name: "CartPole"
 agent_name: "PPO"
-train_iterations: 2000
-#seed: 71
+train_iterations: 1500
+seed: 1035704761
 agent_config:
-  rollout_fragment_length: 32
+  rollout_fragment_length: 128
   minibatch_size: 32
-  num_devices: 2
-  num_envs_per_device: 4
-  gamma: 0.98
-  lambda_: 0.8
-  entropy_coef: 0.001
-  num_epochs: 20
+  num_devices: 1
+  num_envs_per_device: 2
+  gamma: 0.99
+  lambda_: 0.95
+  entropy_coef: 0.01
+  num_epochs: 4
   initial_learning_rate: 0.0005
-  learning_rate_decay_steps: 100000
+  final_learning_rate: 0.0005
   network_config:
     hidden_units: [ 32, 32 ]
