--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,8 +28,24 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        if [ -f test-requirements.txt ]; then pip install -r test-requirements.txt; fi
+        python -m pip install "jax>=0.4.4"
+        python -m pip install "chex>=0.1.6"
+        python -m pip install "brax>=0.1.1"
+        python -m pip install "click>=8.1.3"
+        python -m pip install "distrax>=0.1.3"
+        python -m pip install "dm-env>=1.6"
+        python -m pip install "dm-haiku>=0.0.9"
+        python -m pip install "einops>=0.6.0"
+        python -m pip install "ffmpeg>=1.4"
+        python -m pip install "imageio>=2.25.1"
+        python -m pip install "moviepy>=1.0.3"
+        python -m pip install "ml-collections>=0.1.1"
+        python -m pip install "pygame>=2.1.3"
+        python -m pip install "numpy>=1.22.4"
+        python -m pip install "rlax>=0.1.5"
+        python -m pip install "tqdm>=4.64.1"
+        python -m pip install "wandb>=0.13.10"
+        python -m pip install "gymnasium==0.27.0"
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
