--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -28,25 +28,29 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        python -m pip install "jax>=0.4.6"
+        python -m pip install "jax>=0.4.23"
+        python -m pip install "jaxlib>=0.4.23"
         python -m pip install "chex>=0.1.6"
         python -m pip install "brax>=0.9.0"
         python -m pip install "click>=8.1.3"
         python -m pip install "distrax>=0.1.3"
         python -m pip install "dm-env>=1.6"
         python -m pip install "dm-haiku>=0.0.9"
+        python -m pip install "pgx>=2.0.1"
         python -m pip install "einops>=0.6.0"
         python -m pip install "ffmpeg>=1.4"
         python -m pip install "imageio>=2.25.1"
-        python -m pip install "mctx==0.0.2"
+        python -m pip install "mctx==0.0.5"
         python -m pip install "moviepy>=1.0.3"
         python -m pip install "ml-collections>=0.1.1"
+        python -m pip install "optax>=0.1.7"
         python -m pip install "pygame>=2.1.3"
         python -m pip install "numpy>=1.22.4"
         python -m pip install "rlax>=0.1.5"
         python -m pip install "tqdm>=4.64.1"
         python -m pip install "wandb>=0.13.10"
-        python -m pip install "gymnasium==0.27.0"
+        python -m pip install "gymnasium==0.29.1"
+        python -m pip install .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -56,3 +60,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Test with pytest
+      run: |
+        dopamax train --config examples/ppo-cartpole/config.yaml --offline
