--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,9 +57,15 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Run Unit Tests
       run: |
         pytest
-    - name: Test with pytest
+    - name: Test PPO CartPole Training
       run: |
         dopamax train --config examples/ppo-cartpole/config.yaml --offline
+    - name: Test DQN CartPole Training
+      run: |
+        dopamax train --config examples/dqn-cartpole/config.yaml --offline
+    - name: Test AlphaZero TicTacToe Training
+      run: |
+        dopamax train --config examples/alphazero-tictactoe/config.yaml --offline
