--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,3 +54,7 @@ dopamax = "dopamax._scripts.cli:cli"
 
 [project.urls]
 Repository = "https://github.com/rystrauss/dopamax.git"
+
+[tool.black]
+line-length = 120
+target-version = ["py310", "py311", "py312"]
