--- a/examples/ppo-cartpole/config.yaml
+++ b/examples/ppo-cartpole/config.yaml
@@ -1,8 +1,8 @@
-env_name: "CartPole"
+env_name: "gymnax:CartPole-v1"
 agent_name: "PPO"
 train_iterations: 1500
 # Comment out the seed if you want each run to be different.
-seed: 1035704761
+seed: 88476718
 agent_config:
   rollout_fragment_length: 128
   minibatch_size: 32
