--- a/examples/ppo-mountaincarcontinuous/config.yaml
+++ b/examples/ppo-mountaincarcontinuous/config.yaml
@@ -1,4 +1,4 @@
-env_name: "MountainCarContinuous"
+env_name: "gymnax:MountainCarContinuous"
 agent_name: "PPO"
 train_iterations: 2000
 # Comment out the seed if you want each run to be different.
