--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,28 +12,23 @@ license = { file = "LICENSE" }
 requires-python = ">= 3.10"
 
 dependencies = [
-    "jax==0.4.38",
-    "jaxlib==0.4.38",
-    "chex>=0.1.87",
-    "brax>=0.11.0",
-    "click>=8.1.7",
+    "brax>=0.12.1",
+    "chex>=0.1.88",
+    "click>=8.1.8",
     "distrax>=0.1.5",
     "dm-env>=1.6",
     "dm-haiku>=0.0.13",
-    "pgx>=2.4.2",
-    "einops>=0.8.0",
-    "ffmpeg>=1.4",
-    "imageio>=2.25.1",
-    "mctx>=0.0.5",
-    "moviepy>=1.0.3",
-    "ml-collections>=0.1.1",
-    "optax>=0.2.4",
-    "numpy>=1.22.4",
-    "rlax>=0.1.6",
-    "tqdm>=4.64.1",
-    "wandb>=0.18.7",
+    "einops>=0.8.1",
     "flashbax>=0.1.2",
     "gymnax>=0.0.8",
+    "jax>=0.4.38",
+    "mctx>=0.0.5",
+    "ml-collections>=1.0.0",
+    "optax>=0.2.4",
+    "pgx>=2.5.0",
+    "rlax>=0.1.6",
+    "tqdm>=4.67.1",
+    "wandb>=0.19.7",
 ]
 
 authors = [
