--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,9 @@ Repository = "https://github.com/rystrauss/dopamax.git"
 [tool.ruff]
 line-length = 120
 target-version = ["py310", "py311", "py312"]
+
+[dependency-groups]
+dev = [
+    "tensorboard-plugin-profile>=2.19.0",
+    "tensorflow>=2.18.0",
+]
