--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,31 +4,33 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dopamax"
-version = "0.2.1"
+version = "0.2.2"
 description = "Reinforcement learning in pure JAX."
 readme = "README.md"
 license = { file = "LICENSE" }
 
-requires-python = ">= 3.10"
+requires-python = ">= 3.11"
 
 dependencies = [
-    "brax>=0.12.1",
-    "chex>=0.1.88",
-    "click>=8.1.8",
-    "distrax>=0.1.5",
+    "brax>=0.14.0",
+    "chex>=0.1.91",
+    "click>=8.3.1",
+    "distrax>=0.1.7",
     "dm-env>=1.6",
-    "dm-haiku>=0.0.13",
+    "dm-haiku>=0.0.16",
     "einops>=0.8.1",
-    "flashbax>=0.1.2",
-    "gymnax>=0.0.8",
-    "jax>=0.4.38",
-    "mctx>=0.0.5",
+    "flashbax>=0.1.3",
+    "gymnax>=0.0.9",
+    "jax>=0.8.2",
+    "loguru>=0.7.2",
+    "mctx>=0.0.6",
     "ml-collections>=1.0.0",
-    "optax>=0.2.4",
-    "pgx>=2.5.0",
-    "rlax>=0.1.6",
+    "optax>=0.2.6",
+    "pgx>=2.6.0",
+    "rich>=13.7.0",
+    "rlax>=0.1.8",
     "tqdm>=4.67.1",
-    "wandb>=0.19.7",
+    "wandb>=0.23.1",
 ]
 
 authors = [
@@ -38,7 +40,6 @@ authors = [
 classifiers = [
     "Development Status :: 3 - Alpha",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
@@ -52,7 +53,16 @@ Repository = "https://github.com/rystrauss/dopamax.git"
 
 [tool.ruff]
 line-length = 120
-target-version = ["py310", "py311", "py312"]
+target-version = "py312"
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
 
 [dependency-groups]
 dev = [
