--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ line-ending = "auto"
 
 [dependency-groups]
 dev = [
+    "jupyterlab",
     "pytest>=8.3.4",
     "tensorboard-plugin-profile>=2.19.0",
     "tensorflow>=2.18.0",
